<resources>
    <string name="app_name">ContagiApp</string>
    <string name="home">Home</string>
    <string name="birth">Data di nascita</string>
    <string name="login">Accedi</string>
    <string name="signUp">Registrati</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Ripeti Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Benvenuto !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password deve contenere più di 5 caratteri</string>
    <string name="login_failed">"Accesso fallito"</string>
    <string name="phone">Cellulare</string>
    <string name="search">Cerca</string>
    <string name="invite">Invita</string>
    <string name="participants"> Partecipanti</string>
    <string name="available"> posti disponibili</string>
        <plurals name="nPartecipants">
            <item quantity="one">%d partecipante</item>
            <item quantity="other">%d partecipanti</item>
        </plurals>
    <string name="remember_me">Ricordami</string>
    <string name="createAccount">Crea account</string>
    <string name="VuotoEventi">Non hai partecipato ad alcun evento utlimamente. Clicca su fine per completare l operazione</string>
    <string name="settings">Impostazioni</string>
    <string name="account">Profilo</string>
    <string name="SegnalaPositività">Segnala positività</string>
    <string name="SegnalaNegatività">Segnala negatività</string>
    <string name="DarkTheme">Tema scuro</string>
    <string name="Notifiche">Notifiche</string>
    <string name="InformativaPrivacy">Informativa e privacy</string>
    <string-array name="regioniItaliane">
        <item>Puglia</item>
        <item>Basilicata</item>
        <item>Campania</item>
    </string-array>
    <string-array name="ProvincePuglia">
        <item>BA</item>
        <item>BAT</item>
        <item>FG</item>
        <item>LE</item>
        <item>BR</item>
        <item>TA</item>
    </string-array>
    <string name="EventoEliminato">Evento eliminato</string>
    <string-array name="Citta">
        <item>Bari</item>
        <item>Molfetta</item>
    </string-array>
    <string name="rimuovi_partecipante">Rimuovi partecipante</string>
    <string name="operazione_eseguita">Operazione eseguita</string>
    <string name="DescrStatoGiallo">Lo stato giallo indica che non c\'è stato alcun contatto con persone positive</string>
    <string name="DescrStatoVerde">Lo stato verde indica che l\'utente è negativo al tampone effettuato</string>
    <string name="DescrStatoArancione">Lo stato arancione indica che si sono verificati contatti con persone positive</string>
    <string name="DescrStatoRosso">Lo stato rosso indica si è positivi al COVID-19</string>
    <string name="your_state">Il tuo stato</string>
    <string name="where_do_you_want_to_go">Dove vuoi andare?</string>
    <string name="search_for_available_events">Cerca gli eventi disponibili oppure creane uno</string>
    <string name="search_event">Cerca evento</string>
    <string name="create_event">Crea evento</string>
    <string name="your_create_groups">I tuoi gruppi</string>
    <string name="your_groups_partecipante">Gruppi a cui partecipi</string>
    <string name="select_user">Seleziona utente</string>
    <string name="add_cover_img">Aggiungi un\'immagine di copertina</string>
    <string name="cover_img">immagine di copertina</string>
    <string name="descr_add_cover_img">Dai un\'idea alle persone di cosa tratta il tuo gruppo con una foto.</string>
    <string name="upload_cover_img">Carica immagine di copertina</string>
    <string name="next">Avanti</string>
    <string name="group_name">nome del gruppo</string>
    <string name="description">descrizione</string>
    <string name="group_create">Creazione del gruppo avvenuta con successo</string>
    <string name="friends_aggiunti">Richieste di invito al gruppo inviate</string>
    <string name="end">fine</string>
    <string name="invite_friend_to_group">invita i tuoi amici al gruppo</string>
    <string name="stop">termina</string>
    <string name="modify_data">modifica dati</string>
    <string name="name">nome</string>
    <string name="surname">cognome</string>
    <string name="gender">genere</string>
    <string name="residency">residenza</string>
    <string name="region">regione</string>
    <string name="province">provincia</string>
    <string name="city">città</string>
    <string name="save">salva modifiche</string>
    <string name="add_to_friends">aggiungi agli amici</string>
    <string name="remove_friend">rimuovi amico</string>
    <string name="birth2dots">Data di nascita: </string>
    <string name="age2dots">Età: </string>
    <string name="gender2dots">Genere: </string>
    <string name="residency2dots">Residenza: </string>
    <string name="take_profile_picture">scatta foto profilo</string>
    <string name="upload_profile_picture">carica foto profilo</string>
    <string name="date_of_negativity">data negatività</string>
    <string name="upload_image">carica\nimmagine</string>
    <string name="upload_pdf">carica\npdf</string>
    <string name="report">completa la segnalazione</string>
    <string name="enter_date">Inserisci la data</string>
    <string name="data_successiva">Data inserita successiva a quella di oggi</string>
    <string name="molto_tempo">E trascorso molto tempo</string>
    <string name="giorni10_pos">Devono essere trascorsi almeno 10 giorni dalla positività</string>
    <string name="date_of_positivity">data positività</string>
    <string name="participating">Eventi a cui sono iscritto</string>
    <string name="created_by_me">Eventi creati da me</string>
    <string name="your_friends">I tuoi amici</string>
    <string name="event_name">Nome dell\'evento</string>
    <string name="maximum_number_of_participants">Numero massimo di partecipanti</string>
    <string name="event_date2dots">Data evento:</string>
    <string name="event_date">Data evento</string>
    <string name="event_time2dots">Orario evento</string>
    <string name="event_time">Orario evento</string>
    <string name="event_description">Descrizione evento</string>
    <string name="event_address">Indirizzo evento</string>
    <string name="modifica_evento">Modifica evento</string>
    <string name="number_of_participants">Numero di partecipanti all\'evento </string>
    <string name="available_places">Posti disponibili </string>
    <plurals name="nPlacesAvailable">
        <item quantity="one">%d posto disponibile</item>
        <item quantity="other">%d posti disponibili</item>
    </plurals>
    <string name="partecipate">partecipa </string>
    <string name="partecipate_as_a_group">partecipa come gruppo </string>
    <string name="modify_event">Modifica evento </string>
    <string name="delete_event">Elimina evento </string>
    <string name="exit_group">Abbandona gruppo </string>
    <string name="group_state">Stato del gruppo </string>
    <string name="invite_friends">Invita\namici </string>
    <string name="modify_group">Modifica\ngruppo </string>
    <string name="delete_group">Elimina\ngruppo </string>
    <string name="name_and_surname">Nome Cognome </string>
    <string name="cancel_participation">Annulla partecipazione </string>
    <string name="red_state_participation">Il tuo stato è rosso/arancione\nNon puoi più partecipare a questo evento</string>
    <string name="invite_from_group">Hai ricevuto un invito da questo gruppo:</string>
    <string name="accept">Accetta</string>
    <string name="delete">Elimina</string>
    <string name="participant">Partecipanti</string>
    <string name="did_you_participate_event">Hai partecipato a questo evento?</string>
    <string name="date">Data</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="reminder">Promemoria</string>
    <string name="you_will_participate_event">Parteciperai a questo evento</string>
    <string name="friend_request">Hai ricevuto una richesta d\'amicizia da:</string>
    <string name="years">Anni</string>
    <string name="groups">Gruppi</string>
    <string name="friends">Amici</string>
    <string name="notifications">Notifiche</string>
    <string name="events">Eventi</string>
    <string name="subMessage1">Iscriviti subito all\'evento di ContagiApp\n \'\'</string>
    <string name="subMessage2">\'\' \n che si terrà in:\n</string>
    <string name="separator">", "</string>
    <string name="subMessage3">\n\nEffettua subito la prenotazione sull\'app."</string>
    <string name="subMessage4">\n\nSe non l\'hai già fatto, scarica subito l\'app al seguente link:\n</string>
    <string name="link">https://drive.google.com/file/d/1BsW8gF3v9n-v7afdYC1OF2JG7qV1T1kN/view?usp=sharing</string>
    <string name="ERROR">ERRORE</string>
    <string name="positive">POSITIVO </string>
    <string name="negative">NEGATIVO </string>
    <string name="uncertain">INCERTO </string>
    <string name="contact_with_a_positive">contatto con un POSITIVO </string>
    <string name="state2dots">Stato: </string>
    <string name="name2dots">Nome: </string>
    <string name="surname2dots">Cognome: </string>
    <string name="mail2dots">Mail: </string>
    <string name="date_of_birth2dots">Data di nascita: </string>
    <string name="region_of_residence2dots">Regione di residenza: </string>
    <string name="province_of_residence2dots">Provincia di residenza: </string>
    <string name="city_of_residence2dots">Città di residenza: </string>
    <string name="phone2dots">Cellulare: </string>
    <string name="are_you_sure_you_want_to_quit">Sei sicuro di voler abbandonare il gruppo?</string>
    <string name="group_deleted">Gruppo eliminato</string>
    <string name="group_not_deleted">Gruppo non eliminato</string>
    <string name="no_group_msg">Non hai ancora nessun gruppo. Crea subito uno</string>
    <string name="you_dont_have_any_friends_yet">Non hai ancora nessun amico</string>
    <string name="impossible_operation">Impossibile effettuare questa operazione</string>
    <string name="fill_in_all_fields">Inserisci tutti i campi</string>
    <string name="enter_event_name">Inserisci il nome dell\'evento</string>
    <string name="enter_group_description">Inserisci la descrizione del gruppo</string>
    <string name="enter_event_description">Inserisci la descrizione</string>
    <string name="enter_event_city">Inserisci la città</string>
    <string name="enter_event_address">Inserisci l\'indirizzo</string>
    <string name="enter_event_max_participants_number">Inserisci il numero massimo dei partecipanti</string>
    <string name="enter_group_name">Inserisci il nome del gruppo</string>
    <string name="loading">Caricamento</string>
    <string name="image_uploaded">Immagine caricata</string>
    <string name="image_not_uploaded">Immagine non caricata</string>
    <string name="inserisci_regione">Inserisci regione</string>
    <string name="inserisci_provincia">Inserisci provincia</string>
    <string name="tra_1_ora">The event must be at least an hour from now</string>
    <string name="registration_completed">Iscrizione effettuata</string>
    <string name="group_already_registered">Questo tuo gruppo è già prenotato all\'evento</string>
    <string name="groups_you_created_exceed_maximum">I gruppi da te creati eccedono il numero massimo di partecipanti dell\'evento</string>
    <string name="are_you_sure_you_want_to_remove_the_reservation">Sicuro di voler rimuovere la prenotazione?</string>
    <string name="take_part">Partecipato</string>
    <string name="did_not_partecipated">Non ho partecipato</string>
    <string name="enter_date_and_certificate">Inserisci data e/o certificato</string>
    <string name="accepted">Accettato</string>
    <string name="declined">Rifiutato</string>
    <string name="enter_mail">Inserisci email</string>
</resources>