<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"


    />


    <item
        android:id="@+id/nav_group"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/groups" />

    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends" />

    <item
        android:id="@+id/nav_notify"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/events" />



</menu>