<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/did_you_participate_event"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imgEventoRichiesta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="150dp"
                    android:adjustViewBounds="true"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameEventRichiesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        tools:text="@string/event_name" />

                    <TextView
                        android:id="@+id/tvCittaEventoRichiesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        tools:text="@string/city" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvDataEventoRichiesta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    tools:text="@string/date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#2E6C01"
                    android:text="@string/yes"
                    app:cornerRadius="20dp">

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRifiuta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#870F0F"
                    android:text="@string/no"
                    app:cornerRadius="20dp">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </LinearLayout>






    </com.google.android.material.card.MaterialCardView>




</LinearLayout>