<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/friend_request"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/imgUserRichiesta"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_account_circle_24_gray"/>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/tvNameUserRichiesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tvSurnameUserRichiesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="5dp"
                    android:textColor="@color/black"
                    tools:text="@string/surname" />

                <TextView
                    android:id="@+id/tvAgeUserRichiesta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:layout_gravity="center"
                    android:gravity="end"
                    tools:text="anni"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAccetta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/green"
                    android:text="@string/accept"
                    app:cornerRadius="20dp">

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRifiuta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete"
                    app:cornerRadius="20dp">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

        </LinearLayout>






    </com.google.android.material.card.MaterialCardView>




</LinearLayout>